dist/netboot/Deployment.netboot.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/managed-by: generators
    app.kubernetes.io/name: netboot
  name: netboot
  namespace: netboot
spec:
  minReadySeconds: 0
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      cdk8s.io/metadata.addr: netboot-netboot-deployment-c8828365
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        backup.velero.io/backup-volumes: pvc-config,pvc-assets
      labels:
        app.kubernetes.io/name: netboot
        cdk8s.io/metadata.addr: netboot-netboot-deployment-c8828365
    spec:
      automountServiceAccountToken: false
      containers:
        - image: ghcr.io/netbootxyz/netbootxyz
          imagePullPolicy: Always
          livenessProbe:
            exec:
              command:
                - /healthcheck.sh
            failureThreshold: 3
            initialDelaySeconds: 15
            timeoutSeconds: 5
          name: netboot
          ports:
            - containerPort: 3000
              name: http
            - containerPort: 69
              name: tftp
              protocol: UDP
          readinessProbe:
            exec:
              command:
                - /healthcheck.sh
            failureThreshold: 3
            initialDelaySeconds: 15
            timeoutSeconds: 5
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: false
            runAsNonRoot: false
          volumeMounts:
            - mountPath: /config
              name: pvc-config
            - mountPath: /assets
              name: pvc-assets
      dnsPolicy: ClusterFirst
      hostNetwork: false
      restartPolicy: Always
      securityContext:
        fsGroupChangePolicy: Always
        runAsNonRoot: false
      setHostnameAsFQDN: false
      shareProcessNamespace: false
      terminationGracePeriodSeconds: 30
      volumes:
        - name: pvc-config
          persistentVolumeClaim:
            claimName: config
            readOnly: false
        - name: pvc-assets
          persistentVolumeClaim:
            claimName: assets
            readOnly: false
