dist/netboot/Service.netboot-tftp.yaml
apiVersion: v1
kind: Service
metadata:
  name: netboot-tftp
  namespace: netboot
spec:
  externalIPs: []
  ports:
    - name: tftp
      port: 69
      protocol: UDP
      targetPort: 69
  selector:
    cdk8s.io/metadata.addr: netboot-netboot-deployment-c8828365
  type: LoadBalancer
