dist/netboot/Ingress.netboot.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  name: netboot
  namespace: netboot
spec:
  rules:
    - host: netboot.cmdcentral.xyz
      http:
        paths:
          - backend:
              service:
                name: netboot
                port:
                  number: 3000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - netboot.cmdcentral.xyz
      secretName: netboot-tls
